# spamm-fortran

./: .travis.yml  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  single_multiply.F90
docs/: Doxygen.in  chunk_tree_2d.dot
src/: CMakeLists.txt  spamm.F90  spamm_check.F90  spamm_check_2d.F90  spamm_chunk_2d.F90  spamm_constructor.F90  spamm_constructor_2d.F90  spamm_convert.F90  spamm_convert_2d.F90  spamm_decorate.F90  spamm_decorate_2d.F90  spamm_dense_matrix.F90  spamm_multiply.F90  spamm_multiply_2d.F90  spamm_strings.F90  spamm_tree_2d.F90  spamm_types.F90  spamm_types_2d.F90  spamm_types_chunk_2d.F90  spamm_types_tree_2d.F90
src/fortran/: spamm.F90
tests/: CMakeLists.txt  check_index.F90  check_norm.F90  convert_2d.F90  multiply_2d.F90  print_dense.F90
